Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2807

Symbol for debugging helpers does not update after build

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • None
    • Qt Creator 2.1.0-rc1
    • Debugger
    • Windows Vista x64
      Qt 4.7.1
      MSVC 2008

    Description

      I have a Qt built with MSVC set up in Creator. Options dialog show a red minus because there are no debugging helpers available. I click "Rebuild" and they are being built. When this is done, the Options dialog still shows the red minus. When I select a different version of Qt and then the previous again, a green check is being shown.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes