DebugHelpers: Always update icons after recompile

The information about a Qt version (including the debugging helper paths)
is cached. Invalidate the cache after all the debugging helpers have
been built, such that the following icon updates actually get the latest
information.

We do invalidate the cache already before the compilation of
the debugging helpers have started, but QmlDumperTool::canBuild
then triggers a refill of the cache, at a time where the qmldump
executable has not yet been created.

Reviewed-by: Friedemann Kleint
Task-number: QTCREATORBUG-2807